--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,12 @@ footer {
     transform: translateX(0px); } }
 
 /* Responsive */
+@media screen and (max-width: 500px) {
+  header {
+    margin-right: 50px; }
+  #ul_header {
+    flex-direction: column; } }
+
 @media screen and (max-width: 700px) {
   #perronuevo {
     flex-direction: column; }
