--- a/scss/main.scss
+++ b/scss/main.scss
@@ -205,6 +205,20 @@ footer {
 
 /* Responsive */
 
+@media screen and (max-width: 500px) {
+    
+    header {
+
+        margin-right: 50px;
+    }
+
+
+    #ul_header {
+        flex-direction: column;
+    }
+    
+}
+
 @media screen and (max-width: 700px) {
 
     #perronuevo {
