--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,20 @@ header {
         margin-top: 40px;
     }
 
+    @media screen and (max-width: 500px) {
+    
+        header {
+    
+            margin-right: 50px;
+        }
+    
+    
+        ul{
+            flex-direction: column;
+        }
+        
+    }
+
 }
 
 
@@ -205,19 +219,7 @@ footer {
 
 /* Responsive */
 
-@media screen and (max-width: 500px) {
-    
-    header {
 
-        margin-right: 50px;
-    }
-
-
-    #ul_header {
-        flex-direction: column;
-    }
-    
-}
 
 @media screen and (max-width: 700px) {
 
